# uganet

./: CMakeLists.txt  client.c  main.c  server.c
include/: uga_err.h  uga_fs.h  uga_net.h  uga_read.h  uga_write.h  uganet.h
src/: uga_err.c  uga_fs.c  uga_net.c  uga_read.c  uga_write.c
